[package]
edition = "2021"
name = "buy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
md5 = "0.7.0"
serde_json = "1.0.87"
base64 = "0.13.1"
bincode = "1.3.3"