[package]
edition = "2021"
name = "buy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", default-features = false, features = ["macros"]}
base64 = "0.13.1"
bincode = "1.3.3"
md5 = "0.7.0"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.87"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
